# Santa-Cruz-AI-App

./: .gitignore  README.md  azuredeploy.json  azurepipeline.yml  build.yml  cloudhsell-deployment.sh  cloudshell-deployment.sh  deploy-ARMtemplate.yml  deploy-iot.sh  deploy-manifest.sh  deploy.yml  direct_method.json  eye-vm-setup.sh  frontend-setup.sh  frontend-variables.template  mariner-vm-setup.sh  mariner-vm-variables.template  package-lock.json  setup-brainbox-managed-disk.sh  setup-brainbox-vm.sh  setup.sh  smoketest.sh  tag_push.sh  variables.template
Deployment/: Readme.md  manifest_simulatedsensor.json  setup.sh  variables.template
arm_template_scripts/: create-setup-iot-edge-device.sh  deploy-modules.sh  disk-setup.sh
deployment/: smoketest.sh
deployment/arm/: azuredeploy.json  smoketest.sh
deployment/cloudshell/: deploy-iot.sh  eye-vm-setup.sh  frontend-setup.sh  smoketest.sh  variables.template
docs/: arm_template-prerequisites.md  brainbox-installation-steps.md  cloudshell-deployment-steps.md  install_gst  packages-installation-steps.md  setup-brainbox.md  setup-mariner-vm.md  virtualized-environment-setup.md
docs/specs/: IoT.md  Virtual-Eye.md
edge-solution/: .env  .env.template  deployment.md  lva.env  lva.env.template  opencv.env  opencv.env.template
edge-solution/modules/azureeyeh264module/app/: CMakeLists.txt  helper.hpp  parser.hpp  rtsp.hpp  send_messages.hpp  update_cvs_openvino.py  validator.h
edge-solution/notebooks/: deploy_cvr.ipynb
frontend-app/api/: web.config
frontend-app/app/: .env.local.backup  edwin.txt
iothub-app/: package-lock.json  package.json
people_detection/simple/RtcvDeployment/modules/RTSPServer/: CMakeLists.txt  module.json  rtsp.dockerfile
people_detection/simple/RtcvDeployment/modules/RTSPServer/src/: main.cpp
pipelines/: build-ARMtemplate-eye.yml  build-ARMtemplate.yml  build-Mariner.yml  build-cloudshell.yml  build-frontend.yml  build.yml  deploy-ARMtemplate-eye.yml  deploy-ARMtemplate.yml  deploy-Mariner.yml  deploy-cloudshell.yml  deploy-frontend.yml  deploy.yml  release-github.yml
tools/: Generate AES Encryption URL Source.ipynb
ues-app/: .env  README.md  package-lock.json  package.json
ues-app/public/: index.html  (+1 more)
(+162 files in other folders)
